feat: add logo to query index

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -22,6 +22,9 @@ indices:
       description:
         select: head > meta[name="description"]
         value: attribute(el, "content")
+      logo:
+        select: head > meta[name="logo"]
+        value: attribute(el, "content")
   press-releases:
     include:
       - '/news-and-stories/press-releases/**'
