feat: add publish date to press release index

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -41,3 +41,6 @@ indices:
       lastModified:
         select: none
         value: parseTimestamp(headers["last-modified"], "ddd, DD MMM YYYY hh:mm:ss GMT")
+      publishDate:
+        select: main > div > p:nth-of-type(1)
+        value: textContent(el)
