--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -38,6 +38,9 @@ indices:
       description:
           select: head > meta[property="og:description"]
           value: attribute(el, "content")
+      tags:
+        select: head > meta[property="article:tag"]
+        values: attribute(el, "content")
       lastModified:
         select: none
         value: parseTimestamp(headers["last-modified"], "ddd, DD MMM YYYY hh:mm:ss GMT")
