--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -69,6 +69,9 @@ indices:
       category:
         select: head > meta[property="category"]
         value: attribute(el, "content")
+      tags:
+        select: head > meta[property="tags"]
+        value: attribute(el, "content")
       image:
         select: head > meta[property="og:image"]
         value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
