--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -47,6 +47,9 @@ indices:
       publishDate:
         select: head > meta[name="publish-date"]
         value: parseTimestamp(attribute(el, "content"), MM/DD/YYYY)
+      content:
+        select: main
+        value: textContent(el)
   magazine-articles:
     include:
       - '/news-and-stories/volvo-trucks-magazine/**'
