--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -77,12 +77,12 @@ indices:
         value: attribute(el, "content")
       tags:
         select: head > meta[property="article:tag"]
-        value: attribute(el, "content")
+        values: attribute(el, "content")
       image:
         select: head > meta[property="og:image"]
         value: match(attribute(el, "content"), "https:\/\/[^/]+(/.*)")
       readingTime:
-        select: head > meta[name="reading-time"]
+        select: head > meta[name="readingtime"]
         value: attribute(el, "content")
       lastModified:
         select: none
