added attribute to article index

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -90,3 +90,6 @@ indices:
       publishDate:
         select: head > meta[name="publish-date"]
         value: parseTimestamp(attribute(el, "content"), MM/DD/YYYY)
+      content:
+        select: main
+        value: textContent(el)
