remove fragment directory

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -8,6 +8,7 @@ indices:
       - 'images/**'
       - '/**/footer'
       - '/**/nav'
+      - '/fragments/**'
     target: /query-index.json
     properties:
       lastModified:
