change date name

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -110,7 +110,7 @@ indices:
       index_title:
         select: head > meta[name="index_title"]
         value: attribute(el, "content")
-      index_date:
+      date:
         select: head > meta[name="index_date"]
         value: attribute(el, "content")
       description:
