excluded sub-nav from index and updated css for 1st element

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -9,6 +9,7 @@ indices:
       - '/**/footer'
       - '/**/nav'
       - '/fragments/**'
+      - '/**/sub-nav'
     target: /query-index.json
     properties:
       lastModified:
