fix: exclude sub-nav in press releases index

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -29,6 +29,7 @@ indices:
       - '/news-and-stories/press-releases/**'
     exclude:
       - '/news-and-stories/press-releases/'
+      - '/news-and-stories/press-releases/sub-nav'
     target: /press-releases.json
     properties:
       title:
