--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -10,6 +10,7 @@ indices:
       - '/**/nav'
       - '/fragments/**'
       - '/**/sub-nav'
+      - '/news-and-stories/tags'
     target: /query-index.json
     properties:
       lastModified:
