--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ node_modules/*
 helix-importer-ui
 .DS_Store
 .idea/*
-/tools/content-mirror/mirror/
+/tools/content-mirror/volvotrucks.us/
+/tools/content-mirror/hlxsite/
