--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -7,10 +7,13 @@ indices:
       - '/drafts/**'
       - 'images/**'
       - '/**/footer'
+      - '/footer'
       - '/**/nav'
+      - '/nav'
       - '/fragments/**'
       - '/**/sub-nav'
       - '/news-and-stories/tags'
+      - '/block-library/**'
     target: /query-index.json
     properties:
       lastModified:
@@ -132,10 +135,13 @@ indices:
       - '/drafts/**'
       - 'images/**'
       - '/**/footer'
+      - '/footer'
       - '/**/nav'
+      - '/nav'
       - '/fragments/**'
       - '/**/sub-nav'
       - '/news-and-stories/tags'
+      - '/block-library/**'
     properties:
       published:
         select: none
