--- a/.github/workflows/unpublish-notifier.yaml
+++ b/.github/workflows/unpublish-notifier.yaml
@@ -3,7 +3,8 @@ name: Search trigger to notify the Connector
 on: 
   repository_dispatch:
     types:
-      - resource-published
+      - resource-unpublished
+
 jobs:
   check-event-status:
     runs-on: ubuntu-latest
@@ -15,11 +16,11 @@ jobs:
     if: (github.event.client_payload.status == 200 || github.event.client_payload.status == 204) && endsWith(github.event.client_payload.path, '.md')
     runs-on: ubuntu-latest
     steps:
-    - name: Notify upsert endpoint
+    - name: Notify delete endpoint
       run: |
         sleep 1s
         PAGE_PATH=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$/\//g')
         URI=$(echo "${{ vars.UPSERT_ENDPOINT }}$PAGE_PATH")
-        response=$(curl -X POST -H "Authorization: Api-key ${{ secrets.UPSERT_APIKEY }}" "$URI")
+        response=$(curl -X DELETE -H "Authorization: Api-key ${{ secrets.UPSERT_APIKEY }}" "$URI")
         echo "response: $response"
       shell: bash
