--- a/.github/workflows/unpublish-notifier.yaml
+++ b/.github/workflows/unpublish-notifier.yaml
@@ -21,6 +21,6 @@ jobs:
         sleep 1s
         PAGE_PATH=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$/\//g')
         URI=$(echo "${{ vars.UPSERT_ENDPOINT }}$PAGE_PATH")
-        response=$(curl -X DELETE -H "Authorization: Api-key ${{ secrets.UPSERT_APIKEY }}" "$URI")
+        response=$(curl -X DELETE "$URI")
         echo "response: $response"
       shell: bash
