--- a/.github/workflows/unpublish-notifier.yaml
+++ b/.github/workflows/unpublish-notifier.yaml
@@ -1,4 +1,4 @@
-name: Search trigger to notify the Connector
+name: Search trigger to notify the Connector - delete
 
 on: 
   repository_dispatch:
@@ -20,7 +20,8 @@ jobs:
       run: |
         sleep 1s
         PAGE_PATH=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$/\//g')
-        URI=$(echo "${{ vars.CONNECTOR_DOMAIN }}$PAGE_PATH")
-        response=$(curl -X DELETE "$URI")
+        DOMAIN_URL="${{ vars.DOMAIN_URL }}"        
+        URI=$(echo "${{ vars.CONNECTOR_DOMAIN }}?unique_id=$DOMAIN_URL$PAGE_PATH")
+        response=$(curl -s -X DELETE "$URI")
         echo "response: $response"
       shell: bash
