--- a/.github/workflows/unpublish-notifier.yaml
+++ b/.github/workflows/unpublish-notifier.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Notify delete endpoint
       run: |
         sleep 1s
-        PAGE_PATH=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$/\//g')
+        PAGE_PATH=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$//g')
         DOMAIN_URL="${{ vars.DOMAIN_URL }}"        
         URI=$(echo "${{ vars.CONNECTOR_DOMAIN }}?unique_id=$DOMAIN_URL$PAGE_PATH")
         response=$(curl -s -X DELETE "$URI")
