--- a/.github/workflows/wingeier-sandbox2.yaml
+++ b/.github/workflows/wingeier-sandbox2.yaml
@@ -2,12 +2,11 @@ name: React to Comment
 
 on:
   issue_comment:
-    types: [created]
+    types: [created, edited]
 
 jobs:
   process_comment:
     runs-on: ubuntu-latest
-    if: github.event.issue.pull_request != null && contains(github.event.comment.body, '/trigger-action')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
