--- a/.github/workflows/wingeier-sandbox2.yaml
+++ b/.github/workflows/wingeier-sandbox2.yaml
@@ -2,10 +2,11 @@ name: React to Comment
 
 on:
   issue_comment:
-    types: [created, edited]
+    types: [created, edited, deleted]
 
 jobs:
   process_comment:
+    if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
