--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -25,7 +25,7 @@ jobs:
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: .github/visual-tests/playwright-report/
         retention-days: 30
 #    - name: Comment on Pull Request
 #      uses: peter-evans/create-or-update-comment@v1
