--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -27,16 +27,16 @@ jobs:
         name: playwright-report
         path: .github/visual-tests/playwright-report/
         retention-days: 30
-#    - name: Comment on Pull Request
-#      uses: peter-evans/create-or-update-comment@v1
-#      with:
-#        token: ${{ secrets.GITHUB_TOKEN }}
-#        issue-number: ${{ github.event.number }}
-#        body: |
-#          ## Validation Results
-#
-#          ```
-#          ${{ steps.run-playwright.outputs.validation_results }}
-#          ```
-#        edit-mode: replace
-#        comment-id: ${{ steps.find-comment.outputs.comment-id }}
+    - name: Comment on Pull Request
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        issue-number: ${{ github.event.number }}
+        body: |
+          ## Validation Results
+
+          ```
+          ${{ steps.run-playwright.outputs.validation_results }}
+          ```
+        edit-mode: replace
+        comment-id: ${{ steps.find-comment.outputs.comment-id }}
