--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -15,10 +15,10 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+#    - name: Install dependencies
+#      run: npm ci
+#    - name: Install Playwright Browsers
+#      run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: |
         // set the DOMAIN1 environment variable to the branch name
