--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -15,19 +15,19 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-#    - name: Install dependencies
-#      run: npm ci
-#    - name: Install Playwright Browsers
-#      run: npx playwright install --with-deps
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: |
-        // set the DOMAIN1 environment variable to the branch name
-        export DOMAIN1='main--vg-volvotrucks-us--hlxsites.hlx.live' # TODO: get dynamically from config 
+        # TODO: get dynamically from config
+        export DOMAIN1='main--vg-volvotrucks-us--hlxsites.hlx.live' 
         export DOMAIN2='${{ github.head_ref }}-vg-volvotrucks-us--hlxsites.hlx.live'
         
         echo "DOMAIN1=$DOMAIN1"
         echo "DOMAIN2=$DOMAIN2"
-#        npx playwright test
+        #        npx playwright test
 
         # write a short summary
         echo "SUMMARY=hello world" >> "$GITHUB_OUTPUT"
@@ -52,3 +52,6 @@ jobs:
           ```
         edit-mode: replace
         comment-id: ${{ steps.find-comment.outputs.comment-id }}
+
+# Q: You have an error in your yaml syntax on line 21
+# A: ‘
