--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -20,6 +20,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps chromium
     - name: Run Playwright tests
+      id: run-playwright-tests
       run: |
         # TODO: get dynamically from config
         export DOMAIN1='main--vg-volvotrucks-us--hlxsites.hlx.live' 
@@ -28,13 +29,16 @@ jobs:
 
         # write a short summary
         echo "SUMMARY=hello world" >> "$GITHUB_OUTPUT"
-      id: run-playwright-tests
+        echo "### Hello world! \n :rocket:" >> $GITHUB_STEP_SUMMARY
+
+
     - uses: actions/upload-artifact@v3
-      if: always()
+      if: failure()
       with:
-        name: playwright-report
-        path: .github/visual-tests/screenshots/
-        retention-days: 30
+#        name: playwright-report
+        path: .github/visual-tests/screenshots/*
+        retention-days: 5
+
     - name: Comment on Pull Request
       if: always()
       uses: peter-evans/create-or-update-comment@v3
@@ -47,5 +51,9 @@ jobs:
           ```
           summary: ${{ steps.run-playwright-tests.outputs.SUMMARY }}
           ```
-        edit-mode: replace
-        comment-id: ${{ steps.find-comment.outputs.comment-id }}
+          
+          ### Workflow Execution Details
+          [View the workflow run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+
+#        edit-mode: replace
+#        comment-id: ${{ steps.find-comment.outputs.comment-id }}
