add atom feed user

--- a/.github/workflows/generate-atom-news-feed.yaml
+++ b/.github/workflows/generate-atom-news-feed.yaml
@@ -16,7 +16,12 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: ${{ github.head_ref }}
-        token: ${{ secrets.BOT_ACCESS_TOKEN }}
+        # The bot user https://github.com/hlx-macktrucks-bot is used to commit the changes. The personal access token
+        # must be created from: https://github.com/settings/tokens
+        # The token is then stored in the secrets of the this.
+        # see https://github.com/hlxsites/vg-volvotrucks-us/settings/secrets/actions
+        # more info: https://stackoverflow.com/a/72515781/79461
+        token: ${{ secrets.ATOM_FEED_BOT_ACCESS_TOKEN }}
     - name: Configure git
       run: |
         git config user.name "GitHubActions"
