fix: commit path

--- a/.github/workflows/generate-atom-news-feed.yaml
+++ b/.github/workflows/generate-atom-news-feed.yaml
@@ -43,5 +43,5 @@ jobs:
     - name: Commit and push changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        file_pattern: 'mack-news/feed.xml'
+        file_pattern: 'news-and-stories/press-releases/feed.xml
         commit_message: "Update feed.xml"
