--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -16,6 +16,12 @@
       "paletteRect": "top: auto; bottom: 20px; left: 20px; height: 398px; width: 360px;",
       "url": "https://hlx.live/tools/sidekick/library?base=https://main--vg-volvotrucks-us--hlxsites.hlx.live/block-library/library.json",
       "includePaths": [ "**.docx**" ]
+    },
+    {
+      "id": "fgrep",
+      "title": "Search",
+      "environments": [ "dev", "preview", "live", "prod" ],
+      "url": "/tools/fgrep-attr/fgrep.html"
     }
   ]
 }
