--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -49,6 +49,7 @@ jobs:
         id: visual-snapshots-diff
         uses: getsentry/action-visual-snapshot@v2.0.0
         snapshot-path: .github/visual-tests/screenshots/
+        artifact-name: branch
         base-artifact-name: main
 
       - name: Comment on Pull Request
