--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -48,9 +48,10 @@ jobs:
       - name: Diff snapshots
         id: visual-snapshots-diff
         uses: getsentry/action-visual-snapshot@v2.0.0
-        snapshot-path: .github/visual-tests/screenshots/
-        artifact-name: branch
-        base-artifact-name: main
+        with:
+          snapshot-path: ".github/visual-tests/screenshots/"
+          artifact-name: branch
+          base-artifact-name: main
 
       - name: Comment on Pull Request
         if: always()
