--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -25,32 +25,27 @@ jobs:
           # TODO: get dynamically from config
           export DOMAIN1='main--vg-volvotrucks-us--hlxsites.hlx.live' 
           export DOMAIN2='${{ github.head_ref }}-vg-volvotrucks-us--hlxsites.hlx.live'
-          npx playwright test
+          npx playwright test | tee playwright.log
           
-          # write a short summary
-          echo "SUMMARY=hello world" >> "$GITHUB_OUTPUT"
-          echo "### Hello world! \n :rocket:" >> $GITHUB_STEP_SUMMARY
-
+          diffs=$(grep "$DOMAIN2" playwright.log)
+          if [ -z "$diffs" ]; then
+            echo "No diffs found"
+            echo "No diffs found" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "Diffs found"
+            echo "$diffs"
+            SUMMARY="Visual differences found: 
+              $diffs
+            "
+            echo "SUMMARY=$SUMMARY >> "$GITHUB_OUTPUT"
+            echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+          fi
 
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           #        name: playwright-report
           path: .github/visual-tests/screenshots/*
-  #        retention-days: 5
-
-  visual-diff:
-    if: ${{ github.ref != 'refs/heads/master' }}
-    needs: take-snapshots
-    runs-on: ubuntu-16.04
-    steps:
-      - name: Diff snapshots
-        id: visual-snapshots-diff
-        uses: getsentry/action-visual-snapshot@v2.0.0
-        with:
-          snapshot-path: ".github/visual-tests/screenshots/"
-          artifact-name: branch
-          base-artifact-name: main
 
       - name: Comment on Pull Request
         if: always()
@@ -62,7 +57,7 @@ jobs:
             ## Validation Results
             
             ```
-            summary: ${{ steps.run-playwright-tests.outputs.SUMMARY }}
+            ${{ steps.run-playwright-tests.outputs.SUMMARY }}
             ```
             
             ### Workflow Execution Details
