--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -37,6 +37,8 @@ jobs:
             SUMMARY=$(cat << EOF
           ### Visual differences found: 
             $diffs
+            
+            Screenshots [are attached](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           EOF
           )
           
@@ -50,26 +52,19 @@ jobs:
           fi
 
       - uses: actions/upload-artifact@v3
-        if: failure()
+        if: always()
         with:
-          #        name: playwright-report
           path: .github/visual-tests/screenshots/*
 
       - name: Comment on Pull Request
-        if: ${{ steps.run-playwright-tests.outputs.SUMMARY }}
+        if: steps.run-playwright-tests.outputs.SUMMARY
         uses: peter-evans/create-or-update-comment@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.number }}
           body: |
-            ## Validation Results
-            
             ```
             ${{ steps.run-playwright-tests.outputs.SUMMARY }}
             ```
-            
-            ### Workflow Execution Details
-            [View the workflow run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
 #        edit-mode: replace
 #        comment-id: ${{ steps.find-comment.outputs.comment-id }}
