--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -52,6 +52,10 @@ jobs:
             echo "$EOF" >> "$GITHUB_ENV"
           fi
 
+      - name: Print env
+        run: env
+
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
