--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -31,7 +31,7 @@ jobs:
           if [ -z "$diffs" ]; then
             echo "No diffs found"
             echo "No diffs found" >> "$GITHUB_STEP_SUMMARY"
-            echo "DIFFERENT=false" >> "$GITHUB_ENV"
+            echo "SUMMARY=" >> "$GITHUB_ENV"
           else
             echo "Diffs found"
           
@@ -47,14 +47,17 @@ jobs:
           
             # using multi-line-vars from  https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#example-of-a-multiline-string
             EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-            echo "DIFFERENT=true" >> "$GITHUB_ENV"
+            echo "SUMMARY<<$EOF" >> "$GITHUB_ENV"
             echo "$SUMMARY" "$GITHUB_ENV"
             echo "$EOF" >> "$GITHUB_ENV"
           fi
+          
+          echo "env:"
+          cat $GITHUB_ENV"
 
       - name: Print env
         if: always()
-        run: echo DIFFERENT=$DIFFERENT
+        run: env
 
 
       - uses: actions/upload-artifact@v3
@@ -64,7 +67,7 @@ jobs:
           name: screenshots
 
       - name: Comment on Pull Request
-        if: env.DIFFERENT == 'true'
+        if: env.SUMMARY != ''
         uses: peter-evans/create-or-update-comment@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
