--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -27,12 +27,8 @@ jobs:
           export DOMAIN2='${{ github.head_ref }}--vg-volvotrucks-us--hlxsites.hlx.live'
           npx playwright test | tee playwright.log
           
-          diffs=$(grep "$DOMAIN2" playwright.log)
-          if [ -z "$diffs" ]; then
-            echo "No diffs found"
-            echo "No diffs found" >> "$GITHUB_STEP_SUMMARY"
-            echo "SUMMARY=" >> "$GITHUB_ENV"
-          else
+          if grep "$DOMAIN2" playwright.log; then
+            diffs=$(grep "$DOMAIN2" playwright.log)
             echo "Diffs found"
           
             SUMMARY=$(cat << EOF
@@ -50,6 +46,10 @@ jobs:
             echo "SUMMARY<<$EOF" >> "$GITHUB_ENV"
             echo "$SUMMARY" "$GITHUB_ENV"
             echo "$EOF" >> "$GITHUB_ENV"
+          else 
+            echo "No diffs found"
+            echo "No diffs found" >> "$GITHUB_STEP_SUMMARY"
+            echo "SUMMARY=" >> "$GITHUB_ENV"
           fi
           
           echo "env:"
