use bash script

--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -21,39 +21,7 @@ jobs:
         run: npx playwright install --with-deps chromium
       - name: Run Playwright tests
         id: run-playwright-tests
-        run: |
-          # TODO: get dynamically from config
-          export DOMAIN1='main--vg-volvotrucks-us--hlxsites.hlx.live' 
-          export DOMAIN2='${{ github.head_ref }}--vg-volvotrucks-us--hlxsites.hlx.live'
-          npx playwright test | tee playwright.log
-          
-          if grep "$DOMAIN2" playwright.log; then
-            diffs=$(grep "$DOMAIN2" playwright.log)
-            echo "Diffs found"
-          
-            SUMMARY=$(cat << EOF
-          ### :small_orange_diamond: Visual differences detected: :zap:  
-            $diffs
-            
-            See also diff image [in attached screenshots](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-          EOF
-          )
-          
-            echo "$SUMMARY" >> "$GITHUB_STEP_SUMMARY"
-          
-            # using multi-line-vars from  https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#example-of-a-multiline-string
-            EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-            echo "SUMMARY<<$EOF" >> "$GITHUB_ENV"
-            echo "$SUMMARY" "$GITHUB_ENV"
-            echo "$EOF" >> "$GITHUB_ENV"
-          else 
-            echo "No diffs found"
-            echo "No diffs found" >> "$GITHUB_STEP_SUMMARY"
-            echo "SUMMARY=" >> "$GITHUB_ENV"
-          fi
-          
-          echo "env:"
-          cat "$GITHUB_ENV"
+        run: ./github/visual-tests/run.bash
 
       - name: Print env
         if: always()
