fix bash script path

--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -21,7 +21,7 @@ jobs:
         run: npx playwright install --with-deps chromium
       - name: Run Playwright tests
         id: run-playwright-tests
-        run: .github/visual-tests/run.bash
+        run: ./run.bash
 
       - name: Print env
         if: always()
