--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,6 +1,6 @@
 {
   "project": "Volvo Trucks",
-  "host": "www.volvotrucks.us",
+  "host": "www.volvotrucks.ca",
   "plugins": [
     {
       "id": "tagger",
@@ -14,7 +14,7 @@
       "environments": [ "edit" ],
       "isPalette": true,
       "paletteRect": "top: auto; bottom: 20px; left: 20px; height: 398px; width: 360px;",
-      "url": "https://hlx.live/tools/sidekick/library?base=https://main--vg-volvotrucks-us--hlxsites.hlx.live/block-library/library.json",
+      "url": "https://hlx.live/tools/sidekick/library?base=https://main--vg-volvotrucks-ca--hlxsites.hlx.live/block-library/library.json",
       "includePaths": [ "**.docx**" ]
     },
     {
