--- a/.github/workflows/visual-tests.yaml
+++ b/.github/workflows/visual-tests.yaml
@@ -7,6 +7,8 @@ on:
 env:
   TEST_PATHS: "/ /trucks /trucks/vnl/ /find-a-dealer/"
   TEST_PATHS_INDEXES: "/block-library/library.json "
+  DOMAIN1: "main--vg-volvotrucks-us--hlxsites.hlx.live"
+  DOMAIN2: "${{github.head_ref}}--vg-volvotrucks-us--hlxsites.hlx.live"
 
 jobs:
   compare-pages:
@@ -23,13 +25,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
-
       - name: Generate path list
         run: |
           npm run collect-urls
           cat generated-test-paths.json
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
 
       - name: Run Playwright tests
         id: run-playwright-tests
